update notebook environment

--- a/examples_notebook/Remote_Dask_CGLORS.ipynb
+++ b/examples_notebook/Remote_Dask_CGLORS.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example notebook for remote Dask execution on Zeus\n",
+    "### Example notebook to analyze remote data on Zeus - C-GLORSv7\n",
     "\n",
     "#### Prerequisite: prepare the environment \n",
     "\n",
@@ -12,17 +12,11 @@
     "\n",
     "2. Add your local public key in the .ssh/authorized_keys on your Zeus account\n",
     "\n",
-    "3. Copy the zeus_util.py script in the same directory of this notebook. The module requires *IPython*, *ipywidgets*, *Dask* and *Dask.distributed* Python libraries, as well as Xarray and Cartopy for the map. If not already available, these can installed with one of the following commands:\n",
+    "3. Create the full conda environment starting from the requirements listed in *environment.yml* by running the following commands:\n",
     "\n",
-    "`pip3 install IPython ipywidgets dask==2.12.0 distributed==2.12.0 xarray==0.15.0 cartopy`\n",
+    "`conda env create -f environment.yml`\n",
     "\n",
-    "`conda install -c conda-forge IPython ipywidgets dask==2.12.0 distributed==2.12.0 xarray==0.15.0 cartopy`\n",
-    "\n",
-    "Alternatively create the full conda environment starting from the requirements listed in *env_ds.yml* by running the following commands:\n",
-    "\n",
-    "`conda env create -f env_ds.yml`\n",
-    "\n",
-    "`source activate data-science-cmcc-v1-local`"
+    "`source activate zapata`"
    ]
   },
   {
@@ -34,70 +28,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os, sys\n",
+    "sys.path.append(\"../\")\n",
+    "import zeus\n",
+    "zeus.init(user=\"tl28319\",host='zeus')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Start a Dask client on Zeus with 1 worker node (*n_workers = 1*)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ssh_askpass: exec(/usr/X11R6/bin/ssh-askpass): No such file or directory\n",
-      "Permission denied, please try again.\n",
-      "ssh_askpass: exec(/usr/X11R6/bin/ssh-askpass): No such file or directory\n",
-      "Permission denied, please try again.\n",
-      "ssh_askpass: exec(/usr/X11R6/bin/ssh-askpass): No such file or directory\n",
-      "tl28319@192.168.118.11: Permission denied (publickey,gssapi-keyex,gssapi-with-mic,password).\n"
+      "ls: cannot access /users_home/oda/tl28319/dask-space/connection: No such file or directory\n",
+      "/users_home/oda/tl28319/dask-space/connection\n",
+      "Scheduler address is: tcp://192.168.118.12:46078\n",
+      "Job <12144> is submitted to queue <p_short>.\n",
+      "\n"
      ]
     },
     {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'res' referenced before assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-9a08f59c2f85>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"../\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mzeus\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mzeus\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muser\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"tl28319\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/GIT/Zapata/zeus.py\u001b[0m in \u001b[0;36minit\u001b[0;34m(user)\u001b[0m\n\u001b[1;32m     66\u001b[0m     \u001b[0;32mglobal\u001b[0m \u001b[0mtmp_path\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m     \u001b[0musername\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0muser\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 68\u001b[0;31m     \u001b[0mret\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_remote_cmd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"echo $HOME\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     69\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mret\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     70\u001b[0m         \u001b[0mhome\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mres\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/GIT/Zapata/zeus.py\u001b[0m in \u001b[0;36m_remote_cmd\u001b[0;34m(command, out, var)\u001b[0m\n\u001b[1;32m    108\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    109\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mvar\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 110\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mreturn_code\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mres\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    111\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    112\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mreturn_code\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'res' referenced before assignment"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lovato/miniconda3/envs/zapata/lib/python3.7/site-packages/distributed/client.py:1078: VersionMismatchWarning: Mismatched versions found\n",
+      "\n",
+      "cloudpickle\n",
+      "+-----------+---------+\n",
+      "|           | version |\n",
+      "+-----------+---------+\n",
+      "| client    | 1.6.0   |\n",
+      "| scheduler | 1.3.0   |\n",
+      "+-----------+---------+\n",
+      "  warnings.warn(version_module.VersionMismatchWarning(msg[0][\"warning\"]))\n"
      ]
     }
    ],
-   "source": [
-    "import os, sys\n",
-    "sys.path.append(\"../\")\n",
-    "import zeus\n",
-    "zeus.init(user=\"tl28319\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Check the function documentation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "help(zeus.start_dask)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Start a new Dask cluster on Zeus with 1 worker nodes (*n_workers = 1*)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from distributed import Client, get_client\n",
     "client = zeus.start_dask(name=\"Test\",\n",
@@ -121,9 +101,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table style=\"border: 2px solid white;\">\n",
+       "<tr>\n",
+       "<td style=\"vertical-align: top; border: 0px solid white\">\n",
+       "<h3 style=\"text-align: left;\">Client</h3>\n",
+       "<ul style=\"text-align: left; list-style: none; margin: 0; padding: 0;\">\n",
+       "  <li><b>Scheduler: </b>tcp://192.168.118.12:46078</li>\n",
+       "  <li><b>Dashboard: </b><a href='http://192.168.118.12:33030/status' target='_blank'>http://192.168.118.12:33030/status</a>\n",
+       "</ul>\n",
+       "</td>\n",
+       "<td style=\"vertical-align: top; border: 0px solid white\">\n",
+       "<h3 style=\"text-align: left;\">Cluster</h3>\n",
+       "<ul style=\"text-align: left; list-style:none; margin: 0; padding: 0;\">\n",
+       "  <li><b>Workers: </b>12</li>\n",
+       "  <li><b>Cores: </b>36</li>\n",
+       "  <li><b>Memory: </b>50.00 GB</li>\n",
+       "</ul>\n",
+       "</td>\n",
+       "</tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<Client: 'tcp://192.168.118.12:46078' processes=12 threads=36, memory=50.00 GB>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "client"
    ]
@@ -132,28 +144,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's load the input dataset in parallel using Xarray and perform the average of *tasmax* over the time dimension. The dataset concerns the *tasmax* variable and consists of 156 files (25GB), spanning the whole historical period from 1850 to 2005."
+    "Let's load the C-GLORSv7 dataset in parallel using Xarray using zapata data interface."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Access dataset C-GLORSv7\n",
+      "\n",
+      "\n",
+      "Retrieve variable votemper from component ocn of data stream grid_T as 3D field\n",
+      "Input files not found for C-GLORSv7 located in /data/products/GLOBAL_REANALYSES/C-GLORSv7/MONTHLY\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 1\n"
+     ]
+    }
+   ],
    "source": [
-    "def mf_compute(n):\n",
-    "    import xarray as xr\n",
-    "    client = get_client()\n",
-    "    multi_file_dataset = xr.open_mfdataset(\n",
-    "        '/work/asc/ophidia/demo/cmip5/CMCC-CM/historical/day/tasmax/tasmax_day_CMCC-CM_historical_r1i1p1_*.nc',\n",
-    "        combine='by_coords', concat_dim=\"time\", parallel=True\n",
-    "    )\n",
-    "    return multi_file_dataset\n",
-    "\n",
-    "future = client.submit(mf_compute, 1)\n",
-    "multi_file_dataset = future.result()\n",
-    "mean = multi_file_dataset['tasmax'].mean(dim='time')\n",
-    "result = mean.compute()"
+    "import zapata.data as zdat\n",
+    "client = get_client()\n",
+    "temp = zdat.read_xarray(dataset='C-GLORSv7', var='votemper', period=[2000, 2001], season='JFM', level=[500.])\n"
    ]
   },
   {
@@ -169,14 +192,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(result)"
+    "print(temp)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a map of the average temperature computed using Cartopy."
+    "Create a map of the average temperature using zapata mapping tools."
    ]
   },
   {
@@ -185,48 +208,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "import cartopy.crs as ccrs\n",
-    "import matplotlib.pyplot as plt\n",
-    "from cartopy.mpl.geoaxes import GeoAxes\n",
-    "from cartopy.util import add_cyclic_point\n",
-    "import numpy as np\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "\n",
-    "lat = result['lat'].values\n",
-    "lon = result['lon'].values\n",
-    "var = result.values\n",
-    "\n",
-    "fig = plt.figure(figsize=(15, 6), dpi=100)\n",
-    "\n",
-    "#Add Geo axes to the figure with the specified projection (PlateCarree)\n",
-    "projection = ccrs.PlateCarree()\n",
-    "ax = plt.axes(projection=projection)\n",
-    "\n",
-    "#Draw coastline and gridlines\n",
-    "ax.coastlines()\n",
-    "gl = ax.gridlines(crs=projection, draw_labels=True, linewidth=1, color='black', alpha=0.9, linestyle=':')\n",
-    "gl.xlabels_top = False\n",
-    "gl.ylabels_right = False\n",
-    "\n",
-    "var = np.reshape(var, (len(lat), len(lon)))\n",
-    "\n",
-    "#Wraparound points in longitude\n",
-    "var_cyclic, lon_cyclic = add_cyclic_point(var, coord=lon)\n",
-    "x, y = np.meshgrid(lon_cyclic,lat)\n",
-    "\n",
-    "#Define color levels for color bar\n",
-    "levStep = (np.max(var)-np.min(var))/20\n",
-    "clevs = np.arange(np.min(var),np.max(var)+levStep,levStep)\n",
-    "\n",
-    "#Set filled contour plot\n",
-    "cnplot = ax.contourf(x, y, var_cyclic, clevs, transform=projection,cmap=plt.cm.jet)\n",
-    "plt.colorbar(cnplot,ax=ax)\n",
-    "\n",
-    "ax.set_aspect('auto', adjustable=None)\n",
-    "plt.title('1850-2005 tasmax average (deg K)')\n",
-    "plt.show()"
+    "import zapata.mapping as zmap"
    ]
   },
   {
@@ -238,9 +220,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Job <12144> is being terminated\n"
+     ]
+    }
+   ],
    "source": [
     "zeus.stop_dask(client)"
    ]
@@ -262,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.11"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
