--- a/examples_notebook/Remote_Dask_Test_over_SSH.ipynb
+++ b/examples_notebook/Remote_Dask_Test_over_SSH.ipynb
@@ -12,17 +12,11 @@
     "\n",
     "2. Add your local public key in the .ssh/authorized_keys on your Zeus account\n",
     "\n",
-    "3. Copy the zeus_util.py script in the same directory of this notebook. The module requires *IPython*, *ipywidgets*, *Dask* and *Dask.distributed* Python libraries, as well as Xarray and Cartopy for the map. If not already available, these can installed with one of the following commands:\n",
+    "3. Create the full conda environment starting from the requirements listed in *environment.yml* by running the following commands:\n",
     "\n",
-    "`pip3 install IPython ipywidgets dask==2.12.0 distributed==2.12.0 xarray==0.15.0 cartopy`\n",
+    "`conda env create -f environment.yml`\n",
     "\n",
-    "`conda install -c conda-forge IPython ipywidgets dask==2.12.0 distributed==2.12.0 xarray==0.15.0 cartopy`\n",
-    "\n",
-    "Alternatively create the full conda environment starting from the requirements listed in *env_ds.yml* by running the following commands:\n",
-    "\n",
-    "`conda env create -f env_ds.yml`\n",
-    "\n",
-    "`source activate data-science-cmcc-v1-local`"
+    "`source activate zapata`"
    ]
   },
   {
@@ -34,11 +28,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ssh_askpass: exec(/usr/X11R6/bin/ssh-askpass): No such file or directory\n",
+      "Host key verification failed.\n"
+     ]
+    },
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'res' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-1e6d4655b77d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mzeus\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mzeus\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muser\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"tl28319\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/temp/Zapata/zeus.py\u001b[0m in \u001b[0;36minit\u001b[0;34m(user, host)\u001b[0m\n\u001b[1;32m     72\u001b[0m         \u001b[0mhostname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhost\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     73\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 74\u001b[0;31m     \u001b[0mret\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_remote_cmd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"echo $HOME\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     75\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mret\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     76\u001b[0m         \u001b[0mhome\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mres\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/temp/Zapata/zeus.py\u001b[0m in \u001b[0;36m_remote_cmd\u001b[0;34m(command, out, var)\u001b[0m\n\u001b[1;32m    114\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    115\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mvar\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 116\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mreturn_code\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mres\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    117\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    118\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mreturn_code\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'res' referenced before assignment"
+     ]
+    }
+   ],
    "source": [
-    "import os\n",
+    "import os, sys\n",
+    "sys.path.append(\"../\")\n",
+    "\n",
     "import zeus\n",
     "zeus.init(user=\"YOURUSERNAME\")"
    ]
