--- a/examples_notebook/ERA5-ZM-GEOCAT.ipynb
+++ b/examples_notebook/ERA5-ZM-GEOCAT.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
     }
    ],
    "source": [
-    "import os\n",
+    "import os, sys\n",
     "import math\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -36,8 +36,7 @@
     "import pandas as pd\n",
     "import cartopy.crs as car\n",
     "\n",
-    "\n",
-    "import lib\n",
+    "sys.path.append(\"../\")\n",
     "import zapata.data as zera\n",
     "import zapata.computation as zcom\n",
     "import zapata.mapping as zmap\n",
@@ -641,7 +640,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
